Переделывает позиционирование кота на десктопе

--- a/source/index.html
+++ b/source/index.html
@@ -47,11 +47,13 @@
         <div class="main-title__wrapper container">
           <h1 class="main-title__title">Функциональное<br> питание для котов</h1>
           <p class="main-title__subtitle">Занялся собой? Займись котом!</p>
-          <picture>
-            <source media="(min-width: 1440px)" srcset="img/main-title-image-desktop-1x.png 1x, img/main-title-image-desktop-2x.png 2x" width="522" height="500">
-            <source media="(min-width: 768px)" srcset="img/main-title-image-tablet-1x.png 1x, img/main-title-image-tablet-2x.png 2x" width="709" height="609">
-            <img class="main-title__image" src="img/main-title-image-1x.png" srcset="img/main-title-image-2x.png 2x" width="320" height="270" alt="Функциональное питание для котов">
-          </picture>
+          <div class="main-title__image-wrapper">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/main-title-image-desktop-1x.png 1x, img/main-title-image-desktop-2x.png 2x" width="522" height="500">
+              <source media="(min-width: 768px)" srcset="img/main-title-image-tablet-1x.png 1x, img/main-title-image-tablet-2x.png 2x" width="709" height="609">
+              <img class="main-title__image" src="img/main-title-image-1x.png" srcset="img/main-title-image-2x.png 2x" width="320" height="270" alt="Функциональное питание для котов">
+            </picture>
+          </div>
           <a class="main-title__button button" href="form.html">подобрать программу</a>
         </div>
       </section>
